# ewd-network-bridge

./: .dockerignore  Characteristics.ods  Dockerfile  EW-D data by characteristic handle.txt  README.md  docker-compose.yml  pyproject.toml
docs/: monitor.md
ewd_network_bridge/: __main__.py  event.py  ewd.py  protocol.py  scanner.py  server.py
